--- a/SafeBus/AndroidManifest.xml
+++ b/SafeBus/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bm.savebus"
+    package="com.bm.safebus"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -53,7 +53,7 @@
         <activity android:name="com.bm.safebus.instrucciones.PaginadorInstrucciones" >
         </activity>
         <activity
-            android:name="com.bm.savebus.SafeBusMainActivity"
+            android:name="com.bm.safebus.SafeBusMainActivity"
             android:label="@string/app_name" >
         </activity>
 
@@ -62,7 +62,7 @@
 
         <activity
             android:name="com.bm.safebus.registro.ContactoActivity"
-            android:label="@string/title_activity_contacto"
+            android:label=""
             android:windowSoftInputMode="stateAlwaysVisible" >
         </activity>
     </application>
