--- a/SafeBus/bin/classes/.gitignore
+++ b/SafeBus/bin/classes/.gitignore
@@ -1,2 +1,45 @@
 /android/
 /com/
+/.gitignore
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
