--- a/SafeBus/project.properties
+++ b/SafeBus/project.properties
@@ -15,3 +15,4 @@ target=android-19
 android.library.reference.1=../../../workspace/ModuloLocalizacion
 android.library.reference.2=../../../workspace/google-play-services_lib
 android.library.reference.3=../../../workspace/appcompat_v7
+android.library.reference.4=../../../workspace/ModuloMensajesyDialogos
