--- a/SafeBus/bin/classes/.gitignore
+++ b/SafeBus/bin/classes/.gitignore
@@ -3,3 +3,84 @@
 /.gitignore
 /android/
 /com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
