--- a/SafeBus/.classpath
+++ b/SafeBus/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="/Users/mikesaurio/Documents/adt-bundle-mac-x86_64-20130917/workspace/FacebookSDK/bin/facebooksdk.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
