--- a/SafeBus/AndroidManifest.xml
+++ b/SafeBus/AndroidManifest.xml
@@ -33,10 +33,11 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCY9Mroq0LXjAdzq9JOwq7asHfR9DyIhGI" />
+       <meta-data android:name="com.facebook.sdk.ApplicationId" 
+           android:value="@string/app_id"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <activity
             android:name=".splash.SplashActivity"
             android:label="@string/app_name" >
@@ -67,13 +68,17 @@
         </activity>
         <activity
             android:name=".reporte.ReporteActivity"
-            android:label="@string/title_activity_reporte" 
-         >
+            android:label="@string/title_activity_reporte" >
         </activity>
         <activity
             android:name="com.bm.safebus.alarma.EnviarAlarmaActivity"
             android:label="@string/title_activity_enviar_alarma" >
         </activity>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity android:name="com.bm.safebus.facebook.FacebookLoginActivity" />
     </application>
 
 </manifest>
