--- a/SafeBus/project.properties
+++ b/SafeBus/project.properties
@@ -14,5 +14,5 @@
 target=android-19
 android.library.reference.1=../../../workspace/ModuloLocalizacion
 android.library.reference.2=../../../workspace/google-play-services_lib
-android.library.reference.3=../../../workspace/appcompat_v7
-android.library.reference.4=../../../workspace/ModuloMensajesyDialogos
+android.library.reference.3=../../../workspace/ModuloMensajesyDialogos
+android.library.reference.4=../../../workspace/FacebookSDK
