--- a/SafeBus/bin/classes/.gitignore
+++ b/SafeBus/bin/classes/.gitignore
@@ -23,4 +23,102 @@
 /com/
 /android/
 /com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
 /com/
