--- a/SafeBus/AndroidManifest.xml
+++ b/SafeBus/AndroidManifest.xml
@@ -41,7 +41,8 @@
             android:value="@integer/google_play_services_version" />
         <activity
             android:name=".splash.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
