--- a/SafeBus/bin/classes/.gitignore
+++ b/SafeBus/bin/classes/.gitignore
@@ -21,3 +21,18 @@
 /com/
 /android/
 /com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
+/com/
