--- a/SafeBus/project.properties
+++ b/SafeBus/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../workspace/ModuloLocalizacion
-android.library.reference.2=../../../workspace/google-play-services_lib
-android.library.reference.3=../../../workspace/ModuloMensajesyDialogos
-android.library.reference.4=../../../workspace/FacebookSDK
+android.library.reference.1=../../../workspace/google-play-services_lib
+android.library.reference.2=../../../workspace/FacebookSDK
+android.library.reference.3=../../Biblioteca_LocalizacionAndroid/ModuloLocalizacion
+android.library.reference.4=../../MensajesyDialogosSafeBus/ModuloMensajesyDialogos
