--- a/SafeBus/bin/classes/.gitignore
+++ b/SafeBus/bin/classes/.gitignore
@@ -1,7 +1,150 @@
+/com/
+/.gitignore
 /android/
 /com/
 /android/
 /com/
 /android/
 /com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
 /com/
