--- a/SafeBus/gen/.gitignore
+++ b/SafeBus/gen/.gitignore
@@ -1,3 +1,147 @@
+/com/
+/.gitignore
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
 /android/
 /com/
 /android/
