--- a/SafeBus/bin/classes/.gitignore
+++ b/SafeBus/bin/classes/.gitignore
@@ -1,10 +1,24 @@
-/android/
 /com/
 /.gitignore
 /android/
 /com/
 /android/
 /com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
 /com/
 /com/
 /com/
