--- a/SafeBus/gen/.gitignore
+++ b/SafeBus/gen/.gitignore
@@ -1,6 +1,21 @@
-/android/
 /com/
 /.gitignore
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/com/
+/android/
+/com/
+/android/
+/com/
+/android/
+/com/
 /android/
 /com/
 /android/
