--- a/SafeBus/AndroidManifest.xml
+++ b/SafeBus/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <permission
         android:name="com.bm.safebus.permission.C2D_MESSAGE"
